feat: use official @fal-ai/client with proper ESM support

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "kamuy",
   "version": "1.0.0",
+  "type": "module",
   "dependencies": {
-    "formidable": "^3.5.1"
+    "@fal-ai/client": "^1.2.0"
   }
 }
